# post-disaster-comms

./: .gitignore  .gitmodules  .sops.yaml  404.html  README.md  docker-compose.yaml  index.html  mkdocs.yml  pixi.toml
.github/: CODEOWNERS
.github/workflows/: cd_support_sphere_py.yml  images.yaml  webpreview.yaml
deployment/: README.md  values.cloud.yaml  values.dev.yaml
deployment/cloud/: main.tf  variables.tf
deployment/cloud/aws/: README.md
deployment/docker/: populate_db.Dockerfile  populate_db_dev.Dockerfile
deployment/kubernetes/: populate_db_job.yaml
docs/: index.md
docs/deployment/: 1_deployment_configurations.md  2_AWS_infrastructure_information.md
notebooks/: .gitignore
scripts/: access-cloud-server.sh  aws-user-controls.py  cloud-account-setup.py  docker-login.sh  install-flutter.py  install-k3d.sh  run-cloud-server.py
src/support_sphere/: README.md  pubspec.yaml
src/support_sphere/lib/: main.dart
src/support_sphere/linux/: CMakeLists.txt  my_application.cc
src/support_sphere_db/: README.md  pyproject.toml
src/support_sphere_db/src/ssdb/: __init__.py
src/support_sphere_db/src/ssdb/models/: base.py
src/support_sphere_db/src/ssdb/models/auth/: __init__.py
src/support_sphere_db/src/ssdb/models/public/: __init__.py  user_profile.py
src/support_sphere_db/src/ssdb/repositories/: base_repository.py
src/support_sphere_db/src/ssdb/repositories/auth/: __init__.py  user_repository.py
src/support_sphere_db/src/ssdb/repositories/public/: __init__.py  user_profile_repository.py
src/support_sphere_py/: pyproject.toml
(+131 files in other folders)
